# yak-browser-use

./: .gitignore  ACKNOWLEDGMENTS.md  README.md  README.zh-CN.md  __main__.py  _check_escape.py  commits-history.txt  install.bat  pyproject.toml  run.bat  todo.md
backend/: MANIFEST.in  README.md  __main__.py  pyproject.toml  runtime-whitelist.json
backend/api/: errors.py  routes.py  server.py  service.py  state.py
backend/cdp/: __init__.py  daemon.py  discover.py  helpers.py  launcher.py  playwright_bridge.py  profiles.py  protocols.py  session.py
backend/cli/: _init.py  chrome.py  convert.py  daemon.py  debug.py  logs.py  param.py  pipeline.py  run.py  web.py
backend/compiler/: __init__.py  diff.py  generator.py  graph.py  models.py  parser.py  prepare.py  resolver.py  schema.py  step_type.py
backend/converter/: convert.py  render.py  validate.py
backend/engine/: _param_resolver.py  agent.py  delivery.py  eval_agent.py  events.py  executor.py  ops.py  planner.py  runner.py  runner_preset.py  step_machine.py
backend/engine/_harness/: __init__.py  conversation_loop.py  error_classifier.py  iteration_budget.py  pipeline_events.py  pipeline_task_adapter.py  pipeline_tools.py  retry_utils.py  skill_tools.py  tool_executor.py  tools.py  turn_context.py
backend/engine/_lifecycle/: compensation.py  guardian.py  tool_runner.py
backend/llm/: client.py  messages.py
backend/params/: manager.py
backend/prompts/: _loader.py  generate-handler.md  planner-expand.md  planner-plan.md
backend/prompts/chat/: system.md
backend/prompts/eval_agent/: js_lib.js  system.md
backend/prompts/guardrails/: no_progress.md
backend/prompts/guidance/: tool_strategy.md
backend/prompts/preset/: system.md
backend/prompts/skill/: goal-execution.md
backend/prompts/skill/goal-execution/: SKILL.md
backend/prompts/tool_gen/: generate.md
backend/src/yak_browser_use/: __main__.py
backend/src/yak_browser_use/api/: errors.py  event_bus.py  routes.py  server.py  service.py  session_manager.py  state.py
backend/src/yak_browser_use/cdp/: __init__.py  discover.py  helpers.py  launcher.py  playwright_bridge.py  profiles.py  protocols.py  session.py
backend/src/yak_browser_use/cli/: _init.py  logs.py  run.py  serve.py  web.py
backend/src/yak_browser_use/compiler/: __init__.py  diff.py  generator.py  graph.py  parser.py  pipeline_store.py  prepare.py  resolver.py  (+1 more)
backend/tests/: _debug_a11y.py  conftest.py  run_a11y_on_html.py  run_progressive_profile.py  simplify-dom.test.html  test_a11y_snapshot.py  test_agent.py  test_api_routes.py  test_api_run_snapshot.py  test_api_state.py  test_browser_ops.py  test_cdp_reconnect.py  test_compiler_diff.py  test_compiler_generator.py  test_compiler_graph.py  test_compiler_parser.py  test_compiler_resolver.py  test_conversation_loop.py  test_converter_convert.py  test_converter_render.py  test_converter_validate.py  test_data_browse.py  test_delivery.py  test_error_classifier.py  test_eval_output_to.py  test_events.py  test_exact_match.py  test_executor_helpers.py  test_extract_chat_tools.py  test_file_io.py  test_file_write_template.py  test_format_convert.py  test_format_convert_handler.py  test_format_convert_memory.py  test_format_convert_output_to.py  test_harness_tools.py  test_integration_agent_reform.py  test_iteration_budget.py  test_llm_integration.py  test_ops.py  (+28 more)
backend/tools/: _path_utils.py  adapters.py  base.py  captcha.py  data.py  edit_pipeline.py  extract.py  file_read.py  file_write.py  format_convert.py  record_step.py  registry.py  schemas.py
backend/utils/: browser.py  logging.py  response_logger.py  skill_loader.py  tool_cdp.py
backend/workspace/: manager.py  path_guard.py  session_store.py  version_manager.py
(+631 files in other folders)
