[project]
name = "learning-browser-use"
version = "0.1.0"
description = "A clean, learnable browser automation framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "browser-use>=0.12.9",
    "playwright>=1.48.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets==15.0.1",
]

[project.scripts]
lbu = "__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
