[project]
name = "yak-browser-use"
version = "0.1.0"
description = "A clean, learnable browser automation framework — Chat mode + Preset replay via Playwright CDP"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "SlimeSB", email = "x56277534@gmail.com" },
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "aiohttp>=3.9.0",
    "ddddocr>=1.6.1",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "playwright>=1.48.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets==15.0.1",
]

[project.urls]
Homepage = "https://github.com/SlimeSB/yak-browser-use"
Source = "https://github.com/SlimeSB/yak-browser-use"
BugTracker = "https://github.com/SlimeSB/yak-browser-use/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"yak_browser_use.static" = ["**/*"]
"yak_browser_use.prompts" = ["**/*"]

[project.scripts]
yak-browser-use = "yak_browser_use.cli.web:main"
